<resources>
    <string name="app_name">Alpha Hotels</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="alpha_hotels">Alpha Hotels</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>